<resources>
    <string name="app_name">Tripado</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="loading">Loading…</string>
    <string name="SIGNIN">SIGN IN</string>
    <string name="CREATEONE">CREATE ONE</string>
    <string name="asking_for_account">Don\'t have an account ?</string>
    <string name="register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="source_hint">Source address appears here</string>
    <string name="destination_hint">Destination address appears here</string>
    <string name="choose_source">Choose source</string>
    <string name="choose_destination">Choose destination</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>

    <string-array name="Trip_arrays">
        <item>No Repeat</item>
        <item>Repeat Daily</item>
        <item>Repeat Weekly</item>
        <item>Repeat Monthly</item>
        <item>Custom Period</item>
    </string-array>
    <string-array name="units">
        <item>Days</item>
        <item>Weeks</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>

    <string name="confirm">OK</string>
    <string name="add_trip">Add </string>
    <string name="add_note">Add a note…</string>
    <string name="title_activity_maps">Map</string>
    <string name="end_point">end point</string>
    <string name="start_point">start point</string>
    <string name="permissions_dialog_title">Permissions Prompt</string>
    <string name="permissions_dialog_msg">The following permissions are required for the app to run correctly:\n\n


        * Drawing over other apps: to show your notes when travelling\n\n
    </string>
    <string name="no_upcoming_trips">There are no upcoming trips</string>
</resources>