<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iti.android.tripapp.screens.AddTripActivity">

    <Button
        android:id="@+id/btn_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="218dp"
        android:text="@string/choose_source" />

    <Button
        android:id="@+id/btn_dest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_source"
        android:layout_alignStart="@+id/btn_source"
        android:layout_marginStart="158dp"
        android:layout_marginTop="-49dp"
        android:text="@string/choose_destination" />

    <TextView
        android:id="@+id/tv_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="191dp"
        android:enabled="true"
        android:text="@string/source_hint"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_dest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tv_source"
        android:layout_centerVertical="true"
        android:layout_marginEnd="-19dp"
        android:enabled="true"
        android:text="@string/destination_hint"
        android:textSize="20sp" />
</RelativeLayout>
