<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.SignInActivity">



    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:layout_marginBottom="80dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/signIn"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/btn_style"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/SIGNIN"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="189dp"
        android:layout_height="37dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/asking_for_account" />

    <Button
        android:id="@+id/createAccount"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="39dp"
        android:background="@drawable/btn_style"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/CREATEONE"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold" />

</LinearLayout>